--- a/public/app.scss
+++ b/public/app.scss
@@ -1,9 +1,85 @@
-#number {
-    width: 100px;
-    height: 100px;
-    border: 3px solid #000;
-    border-radius: 12px;
-    -moz-border-radius: 12px;
-    font-size: 75px;
+h1 {
+    position: absolute;
+    top: 8pt;
+    left: 12pt;
+    font-size: 12pt;
+    color: #08a;
+}
+
+#left {
+    float: left;
+    width: 25%;
+    margin-top: 9%;
+}
+#center {
+    float: left;
+    width: 30%;
+    margin-top: 18%;
+}
+#right {
+    float: left;
+    width: 44.5%;
+    margin-top: 3%;
+}
+h2 {
     text-align: center;
+    width: 100%;
+    font-size: 48pt;
+}
+#left div div {
+    text-align: center;
+    width: 110pt;
+    height: 100pt;
+    margin: 0 auto;
+    padding-top: 10pt;
+    padding-bottom: -10pt;
+    border: 8px solid #00b;
+    border-radius: 60pt;
+    -moz-border-radius: 60pt;
+    font-size: 65pt;
+}
+
+#number {
+    width: 400px;
+    height: 400px;
+    border: 12px solid #000;
+    border-radius: 48px;
+    -moz-border-radius: 48px;
+    font-size: 320px;
+    text-align: center;
+}
+
+#chosen {
+    margin: 15pt 5pt 0pt 45pt;
+    border: 3px dashed #000;
+    padding: 20pt;
+    font-size: 32pt;
+}
+
+
+.chosen_elm {
+    line-height: 170%;
+    padding: 4pt;
+    width: 32pt;
+    border-radius: 25px;
+    -moz-border-radius: 25px;
+}
+
+.elm1 {
+    background-color: #ffdddd;
+}
+.elm2 {
+    background-color: #ddffdd;
+}
+.elm3 {
+    background-color: #ddddff;
+}
+.elm4 {
+    background-color: #ffffbb;
+}
+.elm5 {
+    background-color: #ffeebb;
+}
+.elm0 {
+    background-color: #cceeff;
 }
