jquery on local

--- a/public/bingo.haml
+++ b/public/bingo.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %title Fujisan Bingo
-    %script{type: "text/javascript", src:"http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.6.1.min.js"}
+    %script{type: "text/javascript", src:"/jquery-1.6.1.min.js"}
     %script{type: "text/javascript", src:"/app.js"}
     %link{rel: "stylesheet", type: "text/css", href: "/app.css"}
   %body
