--- a/public/bingo.haml
+++ b/public/bingo.haml
@@ -1,14 +1,14 @@
 !!! 5
 %html
   %head
-    %title Fujisan Bingo
+    %title Bingo game on jQuery
     %script{type: "text/javascript", src:"/jquery-1.6.1.min.js"}
     %script{type: "text/javascript", src:"/app.js"}
     %link{rel: "stylesheet", type: "text/css", href: "/app.css"}
   %body
     %div#all
       %h1
-        FMS
+        Udzura
         %span{style: "color: #a00"} Bingo
         System
         v.1.0, powered by
